# test_for_poetry_fastapi

./: main.py  pyproject.toml  requirements.txt
